--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16",
+    "react-datepicker2": "^3.3.13",
     "request": "^2.88.2"
   },
   "devDependencies": {
